2008-09-23  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-any): In Gnus Summary
	buffer, search only current header line.
	(tinydebian-bug-nbr-any-in-string): New.
	(tinydebian-bug-nbr-any-at-current-line): New.
	(tinydebian-bug-nbr-any-at-current-point): Move code to
	`tinydebian-bug-nbr-any-in-string'.
	(tinydebian-gnus-summary-mode-summary-line): New.

2008-09-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-ubuntu-p): Detect Ubuntu
	bug Subject line in Summary buffer.
	(tinydebian-bug-url): Correct Ubuntu bug URL.

2008-09-18  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-forwarded-main):
	New.
	(ti::macrof-minor-mode-wizard): Add to menu
	`tinydebian-bts-mail-ctrl-forwarded-main'.
	(tinydebian-bts-mode-gnus-summary-maybe-turn-on): Remove
	ceck for newsgroup name, because mail can also arrive to INBOX.
	Just turn on `turn-on-tinydebian-bts-mode' for all *Summary*
	buffers.
	(to level::Overview of features): Improve documentation.

	* Massive update: Change wording of every file
	from " Emacs-Lisp load path" to refer to variable `load-path'.

2008-09-16  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyreplace.el
	(tinyreplace-replace-over-files-compile-buffer): Comment
	out call to `vc-registered' which used to check if the file
	was under RCS version control. Obsolete by now.

	* tiny/tinycompile.el (tinycompile-kill-all-file-lines):
	Handle read-only compile buffer correctly by using
	`with-buffer-modified'

	* tiny/tinylib.el (ti::buffer-parse-line-main): Do not strip
	leading ./ or ../ but return path as it.
	(ti::buffer-parse-grep-line): Use `match-string-no-properties'.

2008-09-15  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-:save-title): Remove `concat'
	to make eval form simpler to edit.
	(top level): Checkdoc style check: problems fixed.

2008-09-05  Jari Aalto  <jari.aalto@cante.net>
